--- a/filebrowser/src/main/res/values-de/strings.xml
+++ b/filebrowser/src/main/res/values-de/strings.xml
@@ -72,4 +72,5 @@
     <string name="filter_only">Filtern nach</string>
     <string name="sort_by">Sortieren nach</string>
     <string name="file_info">%s zul. geändert %s</string>
+    <string name="unselectall">Alles wiederufen</string>
 </resources>
