Fixing file_info value to avoid warn/error compiling.

--- a/filebrowser/src/main/res/values-de/strings.xml
+++ b/filebrowser/src/main/res/values-de/strings.xml
@@ -71,6 +71,6 @@
     </string-array>
     <string name="filter_only">Filtern nach</string>
     <string name="sort_by">Sortieren nach</string>
-    <string name="file_info">%s zul. geändert %s</string>
+    <string name="file_info">%1$s zul. geändert %2$s</string>
     <string name="unselectall">Alles wiederufen</string>
 </resources>
