--- a/filebrowser/src/main/res/values/strings.xml
+++ b/filebrowser/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">File Browser</string>
+    <string name="aditya_filebrowser_provider">com.aditya.filebrowser.provider</string>
     <string name="cut">Cut</string>
     <string name="refresh">Refresh</string>
     <string name="paste">Paste</string>
